# two

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 00_TZ.md  ARCHITECTURE.md  DEVELOPMENT_SETUP.md  MASTER_PROMPT.md
infra/postgres/: init.sql
sinanofactory/: __init__.py  cli.py  config.py
sinanofactory/core/: __init__.py  core_spec.py  enums.py  environment.py  hash.py  ligand.py  provenance.py  spec.py  surface.py
sinanofactory/orchestrator/: __init__.py
sinanofactory/screening/: __init__.py
sinanofactory/translation/: __init__.py
tests/: conftest.py
tests/smoke/: test_cli.py
tests/unit/: test_hash.py  test_ligand.py  test_provenance.py  test_spec.py  test_surface.py
